# sysak

./: .gitignore  .gitmodules  Makefile  README.md  configure  sync.sh
source/tools/detect/net/rtrace/: .gitignore  CHANGELOG  Cargo.toml  Makefile  README.md  bpf_core.h  build.rs  common.h  createapp.sh  dockerbuild.sh  vendor.sh
source/tools/detect/net/rtrace/bpfskel/: Cargo.toml
source/tools/detect/net/rtrace/bpfskel/src/: gen.rs  lib.rs  main.rs
source/tools/detect/net/rtrace/bpfskeltest/: Cargo.toml  build.rs
source/tools/detect/net/rtrace/bpfskeltest/src/: main.rs  tcpconnect.rs
source/tools/detect/net/rtrace/bpfskeltest/src/bpf/: tcpconnect.bpf.c  tcpconnect.h
source/tools/detect/net/rtrace/builder/: Cargo.toml
source/tools/detect/net/rtrace/builder/buildertest/: Cargo.toml
source/tools/detect/net/rtrace/builder/buildertest/src/: main.rs
source/tools/detect/net/rtrace/builder/src/: lib.rs
source/tools/detect/net/rtrace/cenum-rs/: Cargo.toml  cargo-expand.sh
source/tools/detect/net/rtrace/cenum-rs/src/: lib.rs
source/tools/detect/net/rtrace/cenum-rs/tests/: cenum_test.rs
source/tools/detect/net/rtrace/drop/: Cargo.toml  build.rs
source/tools/detect/net/rtrace/drop/src/: drop.rs  lib.rs
source/tools/detect/net/rtrace/drop/src/bpf/: bindings.rs  drop.bpf.c  drop.h  vmlinux.h
source/tools/detect/net/rtrace/ebpf/: rtrace.bpf.c  rtrace.c
source/tools/detect/net/rtrace/ebpf/utils/: btf.c  disasm.c  insn.c  object.c
source/tools/detect/net/rtrace/latency/icmp/: Cargo.toml  build.rs
source/tools/detect/net/rtrace/latency/icmp/src/: icmp.rs  lib.rs
source/tools/detect/net/rtrace/resources/: rtrace.db
source/tools/detect/net/rtrace/retran/: Cargo.toml  build.rs
source/tools/detect/net/rtrace/retran/src/: lib.rs  retran.rs
source/tools/detect/net/rtrace/retran/src/bpf/: bindings.rs  bpf_core.h  retran.bpf.c  retran.h  vmlinux.h
source/tools/detect/net/rtrace/rtrace-drop/src/: base.rs
source/tools/detect/net/rtrace/rtrace-drop/src/l2/: mod.rs
source/tools/detect/net/rtrace/rtrace-drop/src/l4/: tcp.rs
source/tools/detect/net/rtrace/rtrace-parser/src/: ksyms.rs
source/tools/detect/net/rtrace/rtrace-rs/: build.rs
source/tools/detect/net/rtrace/rtrace-rs/src/: rtrace.rs
source/tools/detect/net/rtrace/rtrace-rs/src/dynamic/: dynamic.rs  mod.rs
source/tools/detect/net/rtrace/rtrace-rs/src/trace/: mod.rs  prog.rs
source/tools/detect/net/rtrace/rtrace-rs/src/utils/: mod.rs
source/tools/detect/net/rtrace/src/: common.rs  event.rs  filter.rs  lib.rs  main.rs  message.rs  stack.rs  tcpdump.rs
source/tools/detect/net/rtrace/src/abnormal/: abnormal.rs  event.rs  mod.rs  pstree.rs  tcp.rs
source/tools/detect/net/rtrace/src/abnormal/bpf/: abnormal.bpf.c  abnormal.h  tcp.bpf.c
source/tools/detect/net/rtrace/src/analyzer/: mod.rs  tcpping.rs  tcpping_stat.rs  virtio.rs
source/tools/detect/net/rtrace/src/application/: drop.rs  jitter.rs  mod.rs  ping.rs  retran.rs  tcpping.rs
source/tools/detect/net/rtrace/src/bindings/: commonbinding.rs
source/tools/detect/net/rtrace/src/bpf/: drop.bpf.c  drop.h  filter.h  ping_sender.bpf.c  pingtrace.h  queueslow.bpf.c  queueslow.h  retran.bpf.c  retran.h  socket.bpf.c  tcpping.bpf.c  tcpping.h  thread.h  userslow.bpf.c  userslow.h  virtio.bpf.c  virtio.h
source/tools/detect/net/rtrace/src/btfgen/: mod.rs
source/tools/detect/net/rtrace/src/collector/: drop.rs  launcher.rs  mod.rs  netdev.rs  netstat.rs  ping.rs  queueslow.rs  retran.rs  snmp.rs  tcpping.rs  userslow.rs  virtio.rs
source/tools/detect/net/rtrace/src/common/: asset.rs  btree.rs  config.rs  file_logger.rs  iqr.rs  ksyms.rs  mod.rs  protocol.rs  raw_event.rs  sched.rs  stats.rs  utils.rs
source/tools/detect/net/rtrace/src/connectlatency/: connectlatency.rs  mod.rs
source/tools/detect/net/rtrace/src/connectlatency/bpf/: connectlatency.bpf.c  connectlatency.h
source/tools/detect/net/rtrace/src/delta/: delta.rs  mod.rs
source/tools/detect/net/rtrace/src/drop/: drop.rs  event.rs  mod.rs
source/tools/detect/net/rtrace/src/drop/bpf/: drop.bpf.c  drop.h
source/tools/detect/net/rtrace/src/drop/diagnosing/: mod.rs  synqueue.rs
source/tools/detect/net/rtrace/src/eventdiagnosing/: eventdiagnosing.rs  mod.rs
source/tools/detect/net/rtrace/src/eventdiagnosing/bpf/: bpf_core.h  common.h  eventdiagnosing.bpf.c  eventdiagnosing.h
source/tools/detect/net/rtrace/src/latency/: event.rs  latency.rs  mod.rs  pidevent.rs  sockevent.rs
source/tools/detect/net/rtrace/src/latency/bpf/: latency.bpf.c  latency.h
source/tools/detect/net/rtrace/src/latency/icmp/: event.rs  icmp.rs  mod.rs
source/tools/detect/net/rtrace/src/latency/tcp/: mod.rs  skb.rs  sock.rs  tcp.rs
source/tools/detect/net/rtrace/src/latencylegacy/: mod.rs
source/tools/detect/net/rtrace/src/latencylegacy/bpf/: icmp.bpf.c  rtrace.h  tcp.bpf.c
source/tools/detect/net/rtrace/src/latencylegacy/icmp/: event.rs  icmp.rs  mod.rs
source/tools/detect/net/rtrace/src/latencylegacy/tcp/: event.rs  (+4 more)
source/tools/detect/net/rtrace/src/retran/: mod.rs  retran.rs
source/tools/detect/net/rtrace/src/sli/: event.rs  mod.rs  sli.rs
source/tools/detect/net/rtrace/src/utils/: delta_dev.rs  delta_netstat.rs  delta_snmp.rs  distribution.rs  logdistribution.rs  macros.rs  mod.rs
source/tools/detect/net/rtrace/utils/: Cargo.toml
source/tools/detect/net/rtrace/utils/src/: kernel_stack.rs  lib.rs  macros.rs  net.rs  percpu_queue.rs  perf.rs  process.rs  timestamp.rs
source/tools/monitor/observ/ntopo/: Cargo.toml  Makefile
source/tools/monitor/observ/ntopo/src/: edge.rs  main.rs  node.rs  pid.rs  sock.rs
source/tools/monitor/observ/ntopo/src/bpf/: ntopo.bpf.c  ntopo.h  vmlinux.h
source/tools/monitor/observ/xwatcher/: Cargo.toml  Makefile  build.rs
source/tools/monitor/observ/xwatcher/src/: cpu.rs  main.rs  memory.rs  metrics.rs  network.rs  ntopo.rs  rtrace.rs  unity.rs  utils.rs  xwatcher.rs
source/tools/monitor/observ/xwatcher/src/bpf/: ntopo.bpf.c  ntopo.h  vmlinux.h
source/tools/monitor/observ/xwatcher/src/nginx/: access_log.rs  mod.rs  nginx.rs  status.rs
(+1293 files in other folders)
