[package]
name = "rtrace"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.19"
libbpf-sys = { version = "1.0.3" }
log = "0.4.14"
libc = "0.2.125"
anyhow = "1.0.57"
once_cell = "1.8.0"
crossbeam-channel = "0.5"
structopt = "0.3.26"
nix = "0.22"
env_logger = "0.9.0"
clearscreen = "1.0.9"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4.19"
byteorder = "1.4.3"
eutils-rs = "0.1.6"
procfs = "0.14.0"
paste = "1.0"
utils = { path = "utils" }
icmp = { path = "latency/icmp" }
retran = { path = "retran" }
bincode = "2.0.0-rc.1"
ctrlc = { version = "3.0", features = ["termination"] }

drop = { path = "drop" }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

[build-dependencies]
libbpf-cargo = "0.13"
bindgen = "0.59.2"
bpfskel = { path = "./bpfskel" }


[workspace]
members = [
    "utils",
    "builder",
    "builder/buildertest",
    "bpfskel",
  
    "drop",

    "latency/icmp",

    "retran",

    "cenum-rs",
]
