[package]
name = "rtrace"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
libbpf-rs = "0.21.2"
once_cell = "1.17.1"
plain = "0.2.3"
libc = "0.2"
structopt = "0.3.26"
log4rs = "1.2.0"
log = "0.4.19"
local-ip-address = "0.5.5"
crossbeam-channel = "0.5.8"
byteorder = "1.4.3"
num_cpus = "1.16.0"
sysctl = "0.5.4"
uname = "0.1.1"
serde = "1.0.190"
serde_json = "1.0.107"
sqlite = "0.32.0"
pnet = "0.34.0"
rand = "0.8.5"
cached = "0.46.1"
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
num-traits = "0.2.17"
procfs = "0.16.0"
rust-embed = "8.0.0"
tempfile = "3.8.1"
noisy_float = "0.2.0"

[build-dependencies]
libbpf-cargo = "0.21.2"
bindgen = "0.68.1"
