[package]
name = "ntopo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
libbpf-rs = "0.21.2"
once_cell = "1.17.1"
plain = "0.2.3"
libc = "0.2"
structopt = "0.3.26"
log4rs = "1.2.0"
log = "0.4.19"
local-ip-address = "0.5.5"

[build-dependencies]
libbpf-cargo = "0.21.2"
bindgen = "0.60.1"
