[package]
name = "xwatcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
cached = "0.46.0"
chrono = "0.4.31"
curl = "0.4.44"
env_logger = "0.10.0"
libc = "0.2.150"
linemux = "0.3.0"
log = "0.4.20"
metrics-exporter-prometheus = "0.12.1"
procfs = "0.16.0"
psutil = "3.2.2"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
structopt = "0.3.26"
libbpf-rs = "0.21.2"
serde = {version = "1.0.190", features = ["derive"]}
serde_json = "1.0.107"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
local-ip-address = "0.5.6"
get_if_addrs = "0.5.3"
rtrace = {path = "../../../detect/net/rtrace"}
crossbeam = "0.8.2"
once_cell = "1.18.0"
tokio = { version = "1.34.0", features = ["rt"] }


[build-dependencies]
libbpf-cargo = "0.21.2"
bindgen = "0.69.0"
