[package]
name = "bpfskel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
anyhow = "1.0.57"
paste = "1.0"
structopt = "0.3.26"
libbpf-cargo = "0.12"
libbpf-rs = "0.18"
libbpf-sys = "0.8.3+v0.8.1"
memmap2 = "0.5"
scroll = "0.11"
scroll_derive = "0.11"
num_enum = "0.5"
