[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.19"
anyhow = "1.0.57"
libc = "0.2"
libbpf-sys = { version = "1.0.3" }
paste = "1.0.9"
procfs = "0.14.0"
eutils-rs = { git = "https://github.com/chengshuyi/eutils-rs.git" }
cenum-rs = { path = "../cenum-rs" }
num_cpus = "1.0"
once_cell = "1.8.0"
log = "0.4.17"
byteorder = "1.4.3"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}