[package]
name = "icmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libbpf-rs = "0.19"
libbpf-sys = { version = "1.0.3" }
log = "0.4.14"
libc = "0.2.125"
anyhow = "1.0.57"
once_cell = "1.8.0"
crossbeam-channel = "0.5"
cenum-rs = { path = "../../cenum-rs" }
plain = "0.2"
utils = { path = "../../utils" }
builder = { path = "../../builder" }
serde = {version = "1.0", features = ["derive"]}

[build-dependencies]
libbpf-cargo = "0.13"
bindgen = "0.60.1"